--- a/css/main.css
+++ b/css/main.css
@@ -29,6 +29,11 @@ header{
     font-size: 40px;
     font-weight: bold;
 }
+nav .navbar-toggler{
+    color: #FFF;
+    cursor: pointer;
+    font-size: 24px;
+}
 .head nav .navbar-collapse .nav-link{
     position: relative;
     display: inline-block;
@@ -75,10 +80,25 @@ header{
     text-align: center;
     margin-top: 100px;
 }
+@media (max-width: 991px) {/*Medium devices*/
+    .head .info{
+        margin-top: 50px;
+    }
+}
+@media (max-width: 480px){/*Extra Small portrait Phones*/
+    .head .info{
+        margin-top: 30px;
+    }  
+}
 .info>h1{
-    font-size: 72px;
+    font-size: 60px;
     font-weight: bold;
     margin: 10px;
+}
+@media (max-width: 480px){/*Extra Small portrait Phones*/
+    .info>h1{
+        font-size: 50px;
+    }
 }
 .info>p{
     margin-bottom: 0px;
@@ -100,6 +120,22 @@ header{
     -webkit-transition: all .3s linear;
     -o-transition: all .3s linear;
     transition: all .3s linear;
+}
+@media (max-width: 991px) {/*Medium devices*/
+    .info>button{
+        margin: 70px 20px 0px 20px;
+    }
+}
+@media (max-width: 767px) {/*Small devices*/
+    .info>button{
+        margin: 40px 20px 0px 20px;
+    }
+}
+@media (max-width: 480px){/*Extra Small portrait Phones*/
+    .info>button{
+        margin: 40px 0px 0px 0px;
+        font-size: 24px;
+    }
 }
 .info>button:hover{
     border:2px solid #16a085;
@@ -125,25 +161,32 @@ header{
 
 /*end Header*/
  /* Start About */
- .about{
-     padding: 50px 0;
- }
- .about .about-pic img{
+.about{
+    padding: 50px 0;
+}
+.about .about-pic img{
     border-radius: 50%;
     width: 100%;
- }
- .about .about-me{
-     padding: 20px 0px 20px 40px;
- }
- .about .about-me h5,
- .about .about-me h6{
+}
+@media (max-width: 575px) {/*Extra small devices*/
+    .about .about-pic img{
+        width: 60%;
+        margin: auto;
+        display: block;
+    }
+}
+.about .about-me{
+    padding: 20px 0px 20px 40px;
+}
+.about .about-me h5,
+.about .about-me h6{
     margin-bottom: 20px;
- }
- .about .about-me p{
-     color: #5f5f5f;
- }
- /* End About */
- /*Start Skills*/
+}
+.about .about-me p{
+    color: #5f5f5f;
+}
+/* End About */
+/*Start Skills*/
 .skills{
     padding: 0px 0 50px  0;
 }
@@ -175,6 +218,7 @@ header{
 }
 .portfolio>.row{
     margin-right: 0;
+    display: flex;
 }
 .portfolio h1{
     font-size: 40px;
@@ -188,9 +232,6 @@ header{
 }
 .item .item-body h4{
     color: #FFF;
-}
-.portfolio .item .item-body .sub-title {
-    color: #dadcdb;
 }
 .item .item-body p{
     color: #868383;
@@ -208,6 +249,7 @@ header{
     font-weight: bold;
     background: #16a085;
     cursor: pointer;
+    margin-top: 15%;
 }
 .item .item-body .btn:hover{
     background: #115d4e;
@@ -246,11 +288,23 @@ header{
     -o-transition: all .5s linear;
     transition: all .5s linear;
 }
+@media (max-width: 767px) {/*Small devices*/
+    .service .circle{
+        width: 140px;
+        height: 140px;
+        font-size: 50px;
+    }
+}
 .service .circle:hover{
     background: #16a085;
     color: #BBB;
     border: 5px solid #BBB;
     font-size: 70px;
+}
+@media (max-width: 767px) {/*Small devices*/
+    .service .circle:hover{
+        font-size: 55px;
+    }
 }
 .services .ser-two{
     position: relative;
@@ -261,9 +315,14 @@ header{
     width: 100%;
     height: 0;
     left: -50%;
-    top: 50%;
+    top: 36%;
     z-index: -1;
     border-bottom: 1px dashed #BBB;
+}
+@media (max-width: 575px) {/*Extra small devices*/
+    .services .ser-two::before{
+        display: none;
+    }
 }
 .services .ser-two::after{
     position: absolute;
@@ -271,9 +330,14 @@ header{
     width: 100%;
     height: 0;
     right: -50%;
-    top: 50%;
+    top: 36%;
     z-index: -1;
     border-bottom: 1px dashed #BBB;
+}
+@media (max-width: 575px) {/*Extra small devices*/
+    .services .ser-two::after{
+        display: none;
+    }
 }
 .service p{
     position: absolute;
@@ -281,6 +345,11 @@ header{
     color: #5f5f5f;
     font-size: 18px;
     font-weight: bold;
+}
+@media (max-width: 575px) {/*Extra small devices*/
+    .service p{
+        font-size: 16px;
+    }
 }
 /* End Services */
 /*start footer*/
@@ -297,12 +366,27 @@ header{
     color: #16a085;
 }
 .contact form{
-    width: 40%;
+    width: 50%;
     margin: 0px auto;
     padding: 50px;
 }
+@media (max-width: 991px) {/*Medium devices*/
+    .contact form{
+        width: 60%;
+    }  
+}
+@media (max-width: 767px) {/*Small devices*/
+    .contact form{
+        width: 70%;
+    }  
+}
+@media (max-width: 575px) {/*Extra small devices*/
+    .contact form{
+        width: 100%;
+    } 
+}
 .form-control{
-    height: 40px;
+    height: 45px;
     background: #1715156e;
     border: 1px solid #16a085;
 }
@@ -314,12 +398,23 @@ header{
 }
 .btn-lg, .btn-group-lg > .btn{
     color: #FFF;
-    width: 30%;
+    width: 40%;
+    padding: 10px 15px;
     background-color: #16a085;
     border: 2px solid #16a085;
-    font-size: 20px;
+    font-size: 18px;
     font-weight: bold;
     cursor: pointer;
+}
+@media (max-width: 991px) {/*Medium devices*/
+    .btn-lg, .btn-group-lg > .btn{
+        width: 50%;
+    }  
+}
+@media (max-width: 575px) {/*Extra small devices*/
+    .btn-lg, .btn-group-lg > .btn{
+        width: 60%;
+    }  
 }
 .btn-lg:hover, .btn-group-lg > .btn:hover{
     background: #115d4e;
